--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 img {
   max-width: 100%;
   display: block;
-  height: auto;
+  height: 100%;
 }
 
 ul {
@@ -32,12 +32,7 @@ ul {
 }
 
 .gallery-item:hover {
-  transform: scale(1.04);
+  transform: scale(1.02);
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.16),
     0 1px 1px 0 rgba(46, 47, 66, 0.32), 0 2px 1px rgba(46, 47, 66, 0.16);
-}
-
-.backdrop {
-  padding: 0 115px;
-  background: rgba(46, 47, 66, 0.8);
 }
